2003-10-13 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCval.c (valMinus): fixed bug #826041

2003-10-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	Some hc08 related updates that I missed earlier
	* sim/ucsim/stypes.h
        * support/regression/ports/hc08/spec.mk

2003-10-15 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	New target "hc08" for the Motorola 68hc08 family of micros

	* configure
	* configure.in
	* Makefile
	* src/hc08/*
	* src/SDCCmain.c
	* src/port.h
	* sim/ucsim/hc08.src/*
	* sim/ucsim/configure.in
	* src/ucsim/configure
	* sim/ucsim/packages_in.mk
	* as/hc08/*
	* as/Makefile
	* device/include/mc68hc908qy.h
	* device/lib/hc08/*
	* device/lib/Makefile.in
	* support/regression/ports/hc08/*
	* support/regression/Makefile

2003-10-14 Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/z80/gen.c: fixed bug revealed by ast_constant_folding.c
	regression test
	* src/ds390/gen.c (genCast): fixed bug #821957

2003-10-13 Bernhard Held <bernhard@bernhardheld.de>

	* device/lib/logf.c: "fixed" overlay bug
	* support/regression/ports/host/spec.mk: added m library
	* support/regression/ports/mcs51-stack-auto/spec.mk: added float funcs
	* support/regression/tests/float_trans: added (for Eric)

2003-10-12 Bernhard Held <bernhard@bernhardheld.de>

	* src/mcs51/gen.c (genCpl): fixed bug
	http://sf.net/mailarchive/message.php?msg_id=6263915

2003-10-10 Bernhard Held <bernhard@bernhardheld.de>

	* src/SDCCast.c (decorateType): added extended constant folding
	* src/SDCCsymt.c (computeType): cleanup
	* src/SDCCval.c (valShift): minor optimization
	* support/regression/tests/ast_constant_folding.c: added

2003-10-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c: removed some unintended changes

2003-10-09  Erik Petrich <epetrich@ivorytower.norman.ok.us>

	* src/SDCCmain.c (setParseWithComma): fixed bug #816685
	* src/z80/gen.c: fixed part of bug #817589
	* src/SDCCsymt.c (checkFunction): fixed bug #817895
